# photo_contests_website

./: .env_example  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  manage.py  setup.cfg
accounts_api/: urls.py
accounts_api/tests/: __init__.py
accounts_api/tests/views/: __init__.py
accounts_api/utils/: __init__.py
accounts_api/views/: __init__.py
accounts_api/views/sign_up/: __init__.py  sign_up.py
api/: admin.py  urls.py
api/docs/: __init__.py
api/migrations/: 0001_initial.py  0002_photo_author_alter_comment_parrent_comment_and_more.py  0003_comment_author_comment_photo.py  0004_alter_photo_status.py  0005_alter_like_options_like_created_date_and_more.py  0006_rename_commemts_amount_photo_comments_amount.py  0007_remove_photo_photos_image200px_remove_photo_url_and_more.py  0008_alter_comment_parrent_comment_and_more.py  0009_photo_slug_alter_photo_title.py
api/models/: __init__.py
api/serializers/: __init__.py
api/services/: __init__.py
api/tasks/: __init__.py
api/templates/: __init__.py
api/templates/api/: base.html
models_app/: __init__.py
models_app/admin_modules/: __init__.py
models_app/migrations/: __init__.py
models_app/models/: __init__.py
models_app/tasks/: __init__.py
models_appl/: __init__.py  apps.py
models_appl/admin/: __init__.py
models_appl/factories/: __init__.py
models_appl/models/: __init__.py
models_appl/templates/: __init__.py
photo_contest_website/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
photo_contest_website/settings/: __init__.py
templates/: base.html  profile.html
(+31 files in other folders)
