[metadata]
name = photo_contest_website
version = *
author = Motayassa
author_email = malovilyajob@gmail.com
description = Photo contest website - internship
long_description = file: README.rst
classifiers = 
    Framework :: Django
    Programming Language :: Python :: 5

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 80
ignore = E203, E266, E501, E701, E704, W503, B905, B907, F401, D203
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores = __init__.py:F401,F403
[mypy]
plugins =
    mypy_django_plugin.main
[mypy.plugins.django-stubs]
django_settings_module = "photo_contest_website.settings"